Fixed font size and spacing

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,8 @@ body {
 
 body {
     font-family: 'Poppins', sans-serif;
-    font-weight: 400;
+    font-weight: 900;
+    font-size: x-large;
 }
 
 .container {
